# code_rag

./: .gitignore  README.md  compose.yml  main.py  pyproject.toml  test_large.py  test_small.py
src/: component_extractor.py  database.py  grabber.py  llm.py  llm_response_parser.py  retriever.py  utils.py
src/llm/: __init__.py  model.py
