[project]
name = "mar-16-code-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.11",
    "loguru>=0.7.3",
    "pandas>=2.2.3",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.10.6",
    "uvicorn>=0.34.0",
    "tree-sitter-python>=0.23.6",
    "tree-sitter>=0.24.0",
    "aiofiles>=24.1.0",
    "anthropic>=0.49.0",
    "openai>=1.68.2",
]

[dependency-groups]
dev = [
    "ipython>=8.34.0",
    "pyperclip>=1.9.0",
]
